[tool.poetry]
name = "battle-snake"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "battle_snake"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
flask-ngrok = "^0.0.25"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120